--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         <hr class="hr-line" />
       </div>
       <p class="text-white px-2 fs-4">
-        ¡Bienvenido a Injumar Gestión, S.L.U.! Somos una organización creada con
+        ¡Bienvenido a INJUMAR GESTIÓN, S.L.U.! Somos una organización creada con
         el fin de proveer servicios, principalmente Seguros, así como la
         realizacion de tramites y gestiones de diferentes tipos, tales como
         Asesoramiento Jurídico, Gestión de Herencias y Escrituras ante Notario,
