--- a/index.html
+++ b/index.html
@@ -85,9 +85,7 @@
           <div class="par-class">
             <ul id="desplazamiento">
               <li>
-                <span
-                  >Nos dedicamos a hacer sus trámites de manera virtual</span
-                >
+                <span>Nos dedicamos a hacer los trámites que necesite</span>
               </li>
               <li>
                 <span>Contamos con Asesoramiento Jurídico personalizado</span>
@@ -131,13 +129,13 @@
         <hr class="hr-line" />
       </div>
       <p class="text-white px-2 fs-4">
-        ¡Bienvenido a INJUMAR GESTIÓN, S.L.U.! Somos una organización creada con
-        el fin de proveer servicios, principalmente Seguros, así como la
-        realizacion de tramites y gestiones de diferentes tipos, tales como
-        Asesoramiento Jurídico, Gestión de Herencias y Escrituras ante Notario,
-        Gestión Contable y de Impuestos para autónomos y empresas, Instalación
-        de Sistemas de Seguridad (alarmas) e Intermediación Inmobiliaria para
-        venta de inmuebles.
+        ¡Bienvenido a INJUMAR GESTIÓN! Somos una organización creada con el fin
+        de proveer servicios, principalmente Seguros, así como la realización de
+        trámites y gestiones de diferentes tipos, tales como Asesoramiento
+        Jurídico, Gestión de Herencias y Escrituras ante Notario, Gestión
+        Contable y de Impuestos para autónomos y empresas, Instalación de
+        Sistemas de Seguridad (alarmas) e Intermediación Inmobiliaria para venta
+        de inmuebles.
       </p>
       <svg
         xmlns="http://www.w3.org/2000/svg"
@@ -166,12 +164,89 @@
           ></i
         ></span>
 
-        <h2 class="fs-2">Seguros</h2>
-        <p><i class="fa-solid fa-arrow-right fa-beat"></i> Vivienda o local</p>
-        <p><i class="fa-solid fa-arrow-right fa-beat"></i> Automóvil</p>
+        <h2 class="fs-2">Agencia Exclusiva de Occident Seguros</h2>
+        <div class="logoOccident">
+          <a href="seguros.html">
+            <button class="custom-button">
+              <img
+                src="occident-logo.jpg"
+                alt="Occident Seguros Logo"
+                class="logo"
+              />
+            </button>
+          </a>
+        </div>
+
+        <p>
+          Somos especialistas en Seguros de Hogar, Comunidades, Comercios,
+          Oficinas, Pymes, Autos, Accidentes, Responsabilidad Civil... Mediante
+          Análisis de Necesidades asesoramos a nuestros clientes para que tengan
+          la mejor protección (Vida, Decesos, Planes de Pensiones y Ahorro...) y
+          para que consigan sus objetivos financieros a medio y largo plazo,
+          mediante el ahorro o la inversión que mejor se adapten a lo que
+          necesitan. Planes especiales de Protección Integral para autónomos.
+        </p>
+        <!-- <p><i class="fa-solid fa-arrow-right fa-beat"></i> Automóvil</p>
         <p><i class="fa-solid fa-arrow-right fa-beat"></i> ????</p>
         <p><i class="fa-solid fa-arrow-right fa-beat"></i> ????</p>
-        <p><i class="fa-solid fa-arrow-right fa-beat"></i> ????</p>
+        <p><i class="fa-solid fa-arrow-right fa-beat"></i> ????</p> -->
+      </div>
+      <div>
+        <span
+          ><i
+            class="fa-solid fa-book-open fa-fade fa-xl"
+            style="color: #1a1414"
+          ></i
+        ></span>
+        <h2 class="fs-2">
+          Gestión Integral y Tramitación de Escrituras (Herencias, Donaciones,
+          Compraventas, Constitución de Sociedades...)
+        </h2>
+        <p>
+          <i class="fa-solid fa-arrow-right fa-beat"></i> Liquidación,
+          elaboración y presentación de Impuestos de Sucesiones, Donaciones,
+          Transmisiones Patrimoniales, Actos Jurídicos Documentados,
+          Plus-Valías...
+        </p>
+        <p>
+          <i class="fa-solid fa-arrow-right fa-beat"></i> Asistencia a la firma
+          ante Notario
+        </p>
+        <p>
+          <i class="fa-solid fa-arrow-right fa-beat"></i> Presentación en el
+          Registro de la Propiedad o Registro Mercantil
+        </p>
+      </div>
+      <div>
+        <span><i class="fa-solid fa-scale-balanced fa-fade fa-xl"></i></span>
+        <h2 class="fs-2">Asesoramiento y Asistencia Legal y Jurídica</h2>
+        <p><i class="fa-solid fa-arrow-right fa-beat"></i> Fiscal</p>
+        <p><i class="fa-solid fa-arrow-right fa-beat"></i> Laboral</p>
+        <p><i class="fa-solid fa-arrow-right fa-beat"></i> Civil</p>
+        <p><i class="fa-solid fa-arrow-right fa-beat"></i> Penal</p>
+      </div>
+      <div>
+        <span
+          ><i
+            class="fa-solid fa-receipt fa-fade fa-xl"
+            style="color: #1a1414"
+          ></i
+        ></span>
+        <h2 class="fs-2">
+          Asesoría Contable y Fiscal para autónomos y empresas
+        </h2>
+        <p>
+          <i class="fa-solid fa-arrow-right fa-beat"></i> Contabilidad,
+          elaboración y presentación de impuestos
+        </p>
+        <p>
+          <i class="fa-solid fa-arrow-right fa-beat"></i> Elaboración y
+          presentación de cuentas anuales
+        </p>
+        <p>
+          <i class="fa-solid fa-arrow-right fa-beat"></i> Declaraciones de la
+          Renta
+        </p>
       </div>
       <div>
         <span
@@ -182,13 +257,18 @@
         ></span>
 
         <h2 class="fs-2">
-          Intermediación Inmobiliaria para venta de inmuebles
+          Intermediación Inmobiliaria para venta de viviendas, locales, garajes
+          ...
         </h2>
         <p>
-          <i class="fa-solid fa-arrow-right fa-beat"></i> Informe de dominio
-          (matriculado y no matrículado)
+          <!-- <i class="fa-solid fa-arrow-right fa-beat"></i> Informe de dominio -->
+          Acompañamos al cliente en todo el proceso de la venta de su inmueble,
+          desde posicionar el anuncio en las webs de mayor referencia, hasta
+          gestionar las visitas, negociar el mejor acuerdo para el vendedor,
+          elaboración del contrato de arras, hasta terminar con la firma ante
+          Notario.
         </p>
-        <p>
+        <!-- <p>
           <i class="fa-solid fa-arrow-right fa-beat"></i> Copia de asiento
           registral
         </p>
@@ -199,64 +279,19 @@
         <p>
           <i class="fa-solid fa-arrow-right fa-beat"></i> Indice de titulares
         </p>
-        <p><i class="fa-solid fa-arrow-right fa-beat"></i> Estudio de titulo</p>
+        <p><i class="fa-solid fa-arrow-right fa-beat"></i> Estudio de titulo</p> -->
       </div>
-      <div>
-        <span
-          ><i
-            class="fa-solid fa-book-open fa-fade fa-xl"
-            style="color: #1a1414"
-          ></i
-        ></span>
-        <h2 class="fs-2">Gestión de Herencias y de Escrituras ante Notario</h2>
-        <p>
-          <i class="fa-solid fa-arrow-right fa-beat"></i> Liquidación de
-          Impuestos
-        </p>
-        <p>
-          <i class="fa-solid fa-arrow-right fa-beat"></i> Presentación en
-          Registros
-        </p>
-        <p>
-          <i class="fa-solid fa-arrow-right fa-beat"></i> Firma ante Notario
-        </p>
-      </div>
-      <div>
-        <span
-          ><i
-            class="fa-solid fa-receipt fa-fade fa-xl"
-            style="color: #1a1414"
-          ></i
-        ></span>
-        <h2 class="fs-2">
-          Gestión Contable y de Impuestos para autónomos y empresas
-        </h2>
-        <p>
-          <i class="fa-solid fa-arrow-right fa-beat"></i> Certificados de
-          reincidencias
-        </p>
-      </div>
+
       <div>
         <span
           ><i class="fa-solid fa-bell fa-fade fa-xl" style="color: #1a1414"></i
         ></span>
-        <h2 class="fs-2">Instalación de Sistemas de Seguridad</h2>
-        <p><i class="fa-solid fa-arrow-right fa-beat"></i> Alarmas</p>
-      </div>
-      <div>
-        <span><i class="fa-solid fa-scale-balanced fa-fade fa-xl"></i></span>
-        <h2 class="fs-2">Asesoramiento Juridico</h2>
+        <h2 class="fs-2">
+          Instalación de Alarmas para viviendas, comercios y oficinas
+        </h2>
         <p>
-          <i class="fa-solid fa-arrow-right fa-beat"></i> Accidentes laborales
-          (En ocasión e In itinere)
-        </p>
-        <p>
-          <i class="fa-solid fa-arrow-right fa-beat"></i> Familia (Alimentos y
-          Regimen de comunicacion)
-        </p>
-        <p>
-          <i class="fa-solid fa-arrow-right fa-beat"></i> Derechos reales
-          Sucesiones
+          En colaboración con empresas de referencia en sistemas de seguridad
+          (promociones y descuentos especiales para nuestros clientes)
         </p>
       </div>
     </section>
@@ -329,7 +364,7 @@
             style="color: whitesmoke"
           ></i
         ></span>
-        <h2 class="text-white fs-5">661805954</h2>
+        <h2 class="text-white fs-5">637 569 614</h2>
       </div>
 
       <button id="whatsappButton" class="image-button">Enviar WhatsApp</button>
@@ -339,7 +374,7 @@
             .getElementById("whatsappButton")
             .addEventListener("click", function () {
               // Número de teléfono al que deseas enviar el mensaje
-              var phoneNumber = "661805954"; // Reemplaza con el número deseado
+              var phoneNumber = "637569614"; // Reemplaza con el número deseado
 
               // Crea el enlace de WhatsApp
               var whatsappLink =
