--- a/cuenta-cliente.html
+++ b/cuenta-cliente.html
@@ -34,7 +34,7 @@
   </head>
 
   <body>
-    <div class="cliente">
+    <div class="descripcion">
       <h1>CUENTA CLIENTE</h1>
       <p>
         Agrupe todos sus seguros en una sola cuota mensual fija (tarifa plana),
@@ -43,8 +43,15 @@
         mes por todos sus seguros. Se puede agrupar los seguros del titular y
         del cónyuge. Asociado a un depósito garantizado con atractiva
         rentabilidad. <br />
-        https://www.youtube.com/watch?v=muc88VMbrOI
       </p>
+    </div>
+    <div class="video">
+      <a href="https://www.youtube.com/watch?v=muc88VMbrOI" target="_blank">
+        <img src="fotovideo.jpg" alt="Miniatura del video" />
+      </a>
+    </div>
+    <div class="textoVideo">
+      <p>Ver vídeo</p>
     </div>
   </body>
 </html>
