--- a/decesos.html
+++ b/decesos.html
@@ -34,18 +34,18 @@
   </head>
 
   <body>
-    <div class="decesos">
+    <div class="descripcion">
       <h1>DECESOS</h1>
       <p>
-        Servicio funerario completo (incineración, nicho, entierro...)<br />
-        Traslado nacional e internacional<br />
-        Prima única para clientes de edad avanzada<br />
-        Testamento gratuito<br />
-        Borrado digital<br />
-        Gestoría al fallecimiento (obtención de diversos documentos del
+        ✅Servicio funerario completo (incineración, nicho, entierro...)<br />
+        ✅Traslado nacional e internacional<br />
+        ✅Prima única para clientes de edad avanzada<br />
+        ✅Testamento gratuito<br />
+        ✅Borrado digital<br />
+        ✅Gestoría al fallecimiento (obtención de diversos documentos del
         fallecido)<br />
-        Decesos repatriación<br />
-        Decesos para mascotas<br />
+        ✅Decesos repatriación<br />
+        ✅Decesos para mascotas<br />
       </p>
     </div>
   </body>
