--- a/planes-ahorro-inversion.html
+++ b/planes-ahorro-inversion.html
@@ -34,14 +34,14 @@
   </head>
 
   <body>
-    <div class="ahorro">
+    <div class="descripcion">
       <h1>PLANES DE AHORRO E INVERSIÓN</h1>
       <p>
-        Garantizado<br />
-        Cesta de inversión a elegir (Unit-Linked): Renta fija, mixta, variable
+        ✅Garantizado<br />
+        ✅Cesta de inversión a elegir (Unit-Linked): Renta fija, mixta, variable
         (española, europea, internacional, USA...)<br />
-        PIAS (Plan Individual de Ahorro Sistemático)<br />
-        SIALP (Seguro Individual de Ahorro a Largo Plazo)<br />
+        ✅PIAS (Plan Individual de Ahorro Sistemático)<br />
+        ✅SIALP (Seguro Individual de Ahorro a Largo Plazo)<br />
       </p>
     </div>
   </body>
