--- a/planes-pensiones.html
+++ b/planes-pensiones.html
@@ -34,11 +34,11 @@
   </head>
 
   <body>
-    <div class="pensiones">
+    <div class="descripcion">
       <h1>PLANES DE PENSIONES</h1>
       <p>
-        Garantizado (PPA)<br />
-        Renta fija, mixta fija, mixta variable, variable...<br />
+        ✅Garantizado (PPA)<br />
+        ✅Renta fija, mixta fija, mixta variable, variable...<br />
       </p>
     </div>
   </body>
