--- a/responsabilidad-civil.html
+++ b/responsabilidad-civil.html
@@ -34,14 +34,14 @@
   </head>
 
   <body>
-    <div class="responCivil">
+    <div class="descripcion">
       <h1>RESPONSABILIDAD CIVIL</h1>
       <p>
-        Comercios, cultura y ocio<br />
-        Construcción<br />
-        Industrias<br />
-        Privada e Inmuebles<br />
-        Profesional (autónomos)<br />
+        ✅Comercios, cultura y ocio<br />
+        ✅Construcción<br />
+        ✅Industrias<br />
+        ✅Privada e Inmuebles<br />
+        ✅Profesional (autónomos)<br />
       </p>
     </div>
   </body>
