--- a/salud.html
+++ b/salud.html
@@ -34,15 +34,15 @@
   </head>
 
   <body>
-    <div class="salud">
+    <div class="descripcion">
       <h1>SALUD</h1>
       <p>
-        Asistencia Sanitaria (Cuadro médico con los mejores centros médicos y
+        ✅Asistencia Sanitaria (Cuadro médico con los mejores centros médicos y
         hospitales)<br />
-        Reembolso<br />
-        Salud Bienestar (pago por uso) incluido para seniors<br />
-        Subsidio por hospitalización o intervención quirúrgica<br />
-        Póliza dental<br />
+        ✅Reembolso<br />
+        ✅Salud Bienestar (pago por uso) incluido para seniors<br />
+        ✅Subsidio por hospitalización o intervención quirúrgica<br />
+        ✅Póliza dental<br />
       </p>
     </div>
   </body>
