--- a/seguros.html
+++ b/seguros.html
@@ -34,29 +34,41 @@
   </head>
 
   <body>
-    <div class="grid-container">
-      <div class="grid-item"><a href="hogar.html">Hogar</a></div>
-      <div class="grid-item"><a href="comunidades.html">Comunidades</a></div>
-      <div class="grid-item"><a href="autos.html">Autos</a></div>
-      <div class="grid-item"><a href="comercios.html">Comercios</a></div>
-      <div class="grid-item"><a href="oficinas.html">Oficinas</a></div>
-      <div class="grid-item"><a href="pymes.html">PYMES</a></div>
-      <div class="grid-item"><a href="accidentes.html">Accidentes</a></div>
-      <div class="grid-item">
-        <a href="responsabilidad-civil.html">Responsabilidad Civil</a>
+    <div class="container">
+      <div class="descripcion">
+        <h1>OCCIDENT SEGUROS</h1>
       </div>
-      <div class="grid-item"><a href="vida.html">Vida</a></div>
-      <div class="grid-item"><a href="decesos.html">Decesos</a></div>
-      <div class="grid-item"><a href="salud.html">Salud</a></div>
-      <div class="grid-item">
-        <a href="planes-ahorro-inversion.html">Planes de ahorro e inversión</a>
+      <div class="grid-container">
+        <div class="grid-item"><a href="hogar.html">Hogar</a></div>
+        <div class="grid-item"><a href="comunidades.html">Comunidades</a></div>
+        <div class="grid-item"><a href="autos.html">Autos</a></div>
+        <div class="grid-item"><a href="comercios.html">Comercios</a></div>
+        <div class="grid-item"><a href="oficinas.html">Oficinas</a></div>
+        <div class="grid-item"><a href="pymes.html">PYMES</a></div>
+        <div class="grid-item"><a href="accidentes.html">Accidentes</a></div>
+        <div class="grid-item">
+          <a href="responsabilidad-civil.html">Responsabilidad Civil</a>
+        </div>
+        <div class="grid-item"><a href="vida.html">Vida</a></div>
+        <div class="grid-item"><a href="decesos.html">Decesos</a></div>
+        <div class="grid-item"><a href="salud.html">Salud</a></div>
+        <div class="grid-item">
+          <a href="planes-ahorro-inversion.html"
+            >Planes de ahorro e inversión</a
+          >
+        </div>
+        <div class="grid-item">
+          <a href="planes-pensiones.html">Planes de pensiones</a>
+        </div>
+        <div class="grid-item">
+          <a href="cuenta-cliente.html">Cuenta cliente</a>
+        </div>
       </div>
-      <div class="grid-item">
-        <a href="planes-pensiones.html">Planes de pensiones</a>
-      </div>
-      <div class="grid-item">
-        <a href="cuenta-cliente.html">Cuenta cliente</a>
-      </div>
+    </div>
+    <div class="inicio">
+      <a href="index.html">
+        <h6>↩ INICIO</h6>
+      </a>
     </div>
   </body>
 </html>
