--- a/vida.html
+++ b/vida.html
@@ -34,16 +34,16 @@
   </head>
 
   <body>
-    <div class="vida">
+    <div class="descripcion">
       <h1>VIDA</h1>
       <p>
-        Fallecimiento<br />
-        Invalidez<br />
-        Enfermedades Graves<br />
-        Testamento gratuito<br />
-        Rehabilitación cardiaca<br />
-        Segunda opinión médica<br />
-        Borrado digital<br />
+        ✅Fallecimiento<br />
+        ✅Invalidez<br />
+        ✅Enfermedades Graves<br />
+        ✅Testamento gratuito<br />
+        ✅Rehabilitación cardiaca<br />
+        ✅Segunda opinión médica<br />
+        ✅Borrado digital<br />
       </p>
     </div>
   </body>
