--- a/comunidades.html
+++ b/comunidades.html
@@ -34,26 +34,28 @@
   </head>
 
   <body>
-    <div class="comunidades">
+    <div class="descripcion">
       <h1>COMUNIDADES</h1>
       <p>
-        Incendios<br />
-        Daños atmosféricos (incluido por filtraciones de cubierta y fachada)<br />
-        Impacto de vehículos<br />
-        Actos vandálicos<br />
-        Daños por agua (localización y reparación, olvido de cierre de grifos,
+        ✅Incendios<br />
+        ✅Daños atmosféricos (incluido por filtraciones de cubierta y
+        fachada)<br />
+        ✅Impacto de vehículos<br />
+        ✅Actos vandálicos<br />
+        ✅Daños por agua (localización y reparación, olvido de cierre de grifos,
         desatrancos...)<br />
-        Daños estéticos por cualquier siniestro amparado<br />
-        Daños eléctricos <br />
-        Robo y hurto de Contenido <br />
-        Gastos duplicado llaves portal<br />
-        Responsabilidad Civil del inmueble, de la Junta Rectora y
+        ✅Daños estéticos por cualquier siniestro amparado<br />
+        ✅Daños eléctricos <br />
+        ✅Robo y hurto de Contenido <br />
+        ✅Gastos duplicado llaves portal<br />
+        ✅Responsabilidad Civil del inmueble, de la Junta Rectora y
         Medioambiental<br />
-        Roturas de espejos, cristales, sanitarios y cristal de placas solares<br />
-        Cerrajería y electricidad de emergencia<br />
-        Servicio de plagas<br />
-        Asesoramiento Técnico de Edificios<br />
-        Defensa Jurídica y reclamación <br />
+        ✅Roturas de espejos, cristales, sanitarios y cristal de placas
+        solares<br />
+        ✅Cerrajería y electricidad de emergencia<br />
+        ✅Servicio de plagas<br />
+        ✅Asesoramiento Técnico de Edificios<br />
+        ✅Defensa Jurídica y reclamación <br />
       </p>
     </div>
   </body>
