--- a/hogar.html
+++ b/hogar.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Injumar Gestión/Seguros</title>
+    <title>Injumar Gestión/Hogar</title>
     <link rel="stylesheet" href="reset.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
@@ -34,30 +34,31 @@
   </head>
 
   <body>
-    <div class="hogar">
+    <div class="descripcion">
       <h1>HOGAR</h1>
       <p>
-        Incendios<br />
-        Daños atmosféricos (incluido por filtraciones de cubierta y fachada)<br />
-        Actos vandálicos<br />
-        Daños por agua (localización y reparación, olvido de cierre de grifos,
+        ✅Incendios<br />
+        ✅Daños atmosféricos (incluido por filtraciones de cubierta y
+        fachada)<br />
+        ✅Actos vandálicos<br />
+        ✅Daños por agua (localización y reparación, olvido de cierre de grifos,
         desatrancos...)<br />
-        Daños estéticos por cualquier siniestro amparado<br />
-        Daños eléctricos (incluido deterioro de alimentos en la nevera)<br />
-        Robo, hurto y atraco en vivienda <br />
-        Atraco en el exterior<br />
-        Reposición de cerraduras por hurto o pérdida<br />
-        Responsabilidad Civil del inmueble y familiar (incluye para mascotas,
+        ✅Daños estéticos por cualquier siniestro amparado<br />
+        ✅Daños eléctricos (incluido deterioro de alimentos en la nevera)<br />
+        ✅Robo, hurto y atraco en vivienda <br />
+        ✅Atraco en el exterior<br />
+        ✅Reposición de cerraduras por hurto o pérdida<br />
+        ✅Responsabilidad Civil del inmueble y familiar (incluye para mascotas,
         obligatoria a partir del 29 de Septiembre por la Ley de Bienestar
         Animal)<br />
-        Roturas de espejos, cristales, sanitarios, encimeras, vitrocerámicas,
+        ✅Roturas de espejos, cristales, sanitarios, encimeras, vitrocerámicas,
         cristal de placas solares y pantallas de teléfonos móviles <br />
-        Servicio manitas para pequeñas reparaciones en el hogar<br />
-        Servicio de reparación de electrodomésticos<br />
-        Servicio urgente de reparación de calderas de gas<br />
-        Cerrajería y electricidad de emergencia<br />
-        Defensa Jurídica y reclamación<br />
-        Protección Integral al Arrendador <br />
+        ✅Servicio manitas para pequeñas reparaciones en el hogar<br />
+        ✅Servicio de reparación de electrodomésticos<br />
+        ✅Servicio urgente de reparación de calderas de gas<br />
+        ✅Cerrajería y electricidad de emergencia<br />
+        ✅Defensa Jurídica y reclamación<br />
+        ✅Protección Integral al Arrendador <br />
       </p>
     </div>
   </body>
