--- a/pymes.html
+++ b/pymes.html
@@ -34,26 +34,26 @@
   </head>
 
   <body>
-    <div class="pymes">
+    <div class="descripcion">
       <h1>PYMES</h1>
       <p>
-        Incendios<br />
-        Daños atmosféricos (incluido por filtraciones de cubierta)<br />
-        Impacto de vehículos<br />
-        Actos vandálicos<br />
-        Daños por agua (localización y reparación, exceso de consumo...)<br />
-        Daños estéticos por cualquier siniestro amparado<br />
-        Daños eléctricos (incluido deterioro de alimentos refrigerados)<br />
-        Robo y hurto de Contenido y de efectivo<br />
-        Gastos de sustitución de cerradura por robo, hurto o pérdida<br />
-        Responsabilidad Civil (actividad, trabajos realizados, contaminación
+        ✅Incendios<br />
+        ✅Daños atmosféricos (incluido por filtraciones de cubierta)<br />
+        ✅Impacto de vehículos<br />
+        ✅Actos vandálicos<br />
+        ✅Daños por agua (localización y reparación, exceso de consumo...)<br />
+        ✅Daños estéticos por cualquier siniestro amparado<br />
+        ✅Daños eléctricos (incluido deterioro de alimentos refrigerados)<br />
+        ✅Robo y hurto de Contenido y de efectivo<br />
+        ✅Gastos de sustitución de cerradura por robo, hurto o pérdida<br />
+        ✅Responsabilidad Civil (actividad, trabajos realizados, contaminación
         accidental...)<br />
-        Roturas de espejos, cristales, sanitarios, rótulos y cristal de placas
+        ✅Roturas de espejos, cristales, sanitarios, rótulos y cristal de placas
         solares<br />
-        Pérdida por paralización de la actividad<br />
-        Avería de equipos ofimáticos y maquinaria<br />
-        Cerrajería y electricidad de emergencia<br />
-        Defensa Jurídica y reclamación <br />
+        ✅Pérdida por paralización de la actividad<br />
+        ✅Avería de equipos ofimáticos y maquinaria<br />
+        ✅Cerrajería y electricidad de emergencia<br />
+        ✅Defensa Jurídica y reclamación <br />
       </p>
     </div>
   </body>
