--- a/comunidades.html
+++ b/comunidades.html
@@ -37,26 +37,36 @@
     <div class="descripcion">
       <h1>COMUNIDADES</h1>
       <p>
-        ✅Incendios<br />
-        ✅Daños atmosféricos (incluido por filtraciones de cubierta y
+        ✅ Incendios<br />
+        ✅ Daños atmosféricos (incluido por filtraciones de cubierta y
         fachada)<br />
-        ✅Impacto de vehículos<br />
-        ✅Actos vandálicos<br />
-        ✅Daños por agua (localización y reparación, olvido de cierre de grifos,
-        desatrancos...)<br />
-        ✅Daños estéticos por cualquier siniestro amparado<br />
-        ✅Daños eléctricos <br />
-        ✅Robo y hurto de Contenido <br />
-        ✅Gastos duplicado llaves portal<br />
-        ✅Responsabilidad Civil del inmueble, de la Junta Rectora y
+        ✅ Impacto de vehículos<br />
+        ✅ Actos vandálicos<br />
+        ✅ Daños por agua (localización y reparación, olvido de cierre de
+        grifos, desatrancos...)<br />
+        ✅ Daños estéticos por cualquier siniestro amparado<br />
+        ✅ Daños eléctricos <br />
+        ✅ Robo y hurto de Contenido <br />
+        ✅ Gastos duplicado llaves portal<br />
+        ✅ Responsabilidad Civil del inmueble, de la Junta Rectora y
         Medioambiental<br />
-        ✅Roturas de espejos, cristales, sanitarios y cristal de placas
+        ✅ Roturas de espejos, cristales, sanitarios y cristal de placas
         solares<br />
-        ✅Cerrajería y electricidad de emergencia<br />
-        ✅Servicio de plagas<br />
-        ✅Asesoramiento Técnico de Edificios<br />
-        ✅Defensa Jurídica y reclamación <br />
+        ✅ Cerrajería y electricidad de emergencia<br />
+        ✅ Servicio de plagas<br />
+        ✅ Asesoramiento Técnico de Edificios<br />
+        ✅ Defensa Jurídica y reclamación <br />
       </p>
+    </div>
+    <div class="inicio">
+      <a href="index.html">
+        <h6>↩ INICIO</h6>
+      </a>
+      <div class="volver">
+        <a href="seguros.html">
+          <h6>↩ VOLVER A SEGUROS</h6>
+        </a>
+      </div>
     </div>
   </body>
 </html>
