--- a/cuenta-cliente.html
+++ b/cuenta-cliente.html
@@ -53,5 +53,15 @@
     <div class="textoVideo">
       <p>Ver vídeo</p>
     </div>
+    <div class="inicio">
+      <a href="index.html">
+        <h6>↩ INICIO</h6>
+      </a>
+      <div class="volver">
+        <a href="seguros.html">
+          <h6>↩ VOLVER A SEGUROS</h6>
+        </a>
+      </div>
+    </div>
   </body>
 </html>
