--- a/decesos.html
+++ b/decesos.html
@@ -37,16 +37,26 @@
     <div class="descripcion">
       <h1>DECESOS</h1>
       <p>
-        ✅Servicio funerario completo (incineración, nicho, entierro...)<br />
-        ✅Traslado nacional e internacional<br />
-        ✅Prima única para clientes de edad avanzada<br />
-        ✅Testamento gratuito<br />
-        ✅Borrado digital<br />
-        ✅Gestoría al fallecimiento (obtención de diversos documentos del
+        ✅ Servicio funerario completo (incineración, nicho, entierro...)<br />
+        ✅ Traslado nacional e internacional<br />
+        ✅ Prima única para clientes de edad avanzada<br />
+        ✅ Testamento gratuito<br />
+        ✅ Borrado digital<br />
+        ✅ Gestoría al fallecimiento (obtención de diversos documentos del
         fallecido)<br />
-        ✅Decesos repatriación<br />
-        ✅Decesos para mascotas<br />
+        ✅ Decesos repatriación<br />
+        ✅ Decesos para mascotas<br />
       </p>
+    </div>
+    <div class="inicio">
+      <a href="index.html">
+        <h6>↩ INICIO</h6>
+      </a>
+      <div class="volver">
+        <a href="seguros.html">
+          <h6>↩ VOLVER A SEGUROS</h6>
+        </a>
+      </div>
     </div>
   </body>
 </html>
