--- a/hogar.html
+++ b/hogar.html
@@ -37,29 +37,39 @@
     <div class="descripcion">
       <h1>HOGAR</h1>
       <p>
-        ✅Incendios<br />
-        ✅Daños atmosféricos (incluido por filtraciones de cubierta y
+        ✅ Incendios<br />
+        ✅ Daños atmosféricos (incluido por filtraciones de cubierta y
         fachada)<br />
-        ✅Actos vandálicos<br />
-        ✅Daños por agua (localización y reparación, olvido de cierre de grifos,
-        desatrancos...)<br />
-        ✅Daños estéticos por cualquier siniestro amparado<br />
-        ✅Daños eléctricos (incluido deterioro de alimentos en la nevera)<br />
-        ✅Robo, hurto y atraco en vivienda <br />
-        ✅Atraco en el exterior<br />
-        ✅Reposición de cerraduras por hurto o pérdida<br />
-        ✅Responsabilidad Civil del inmueble y familiar (incluye para mascotas,
+        ✅ Actos vandálicos<br />
+        ✅ Daños por agua (localización y reparación, olvido de cierre de
+        grifos, desatrancos...)<br />
+        ✅ Daños estéticos por cualquier siniestro amparado<br />
+        ✅ Daños eléctricos (incluido deterioro de alimentos en la nevera)<br />
+        ✅ Robo, hurto y atraco en vivienda <br />
+        ✅ Atraco en el exterior<br />
+        ✅ Reposición de cerraduras por hurto o pérdida<br />
+        ✅ Responsabilidad Civil del inmueble y familiar (incluye para mascotas,
         obligatoria a partir del 29 de Septiembre por la Ley de Bienestar
         Animal)<br />
-        ✅Roturas de espejos, cristales, sanitarios, encimeras, vitrocerámicas,
+        ✅ Roturas de espejos, cristales, sanitarios, encimeras, vitrocerámicas,
         cristal de placas solares y pantallas de teléfonos móviles <br />
-        ✅Servicio manitas para pequeñas reparaciones en el hogar<br />
-        ✅Servicio de reparación de electrodomésticos<br />
-        ✅Servicio urgente de reparación de calderas de gas<br />
-        ✅Cerrajería y electricidad de emergencia<br />
-        ✅Defensa Jurídica y reclamación<br />
-        ✅Protección Integral al Arrendador <br />
+        ✅ Servicio manitas para pequeñas reparaciones en el hogar<br />
+        ✅ Servicio de reparación de electrodomésticos<br />
+        ✅ Servicio urgente de reparación de calderas de gas<br />
+        ✅ Cerrajería y electricidad de emergencia<br />
+        ✅ Defensa Jurídica y reclamación<br />
+        ✅ Protección Integral al Arrendador <br />
       </p>
+    </div>
+    <div class="inicio">
+      <a href="index.html">
+        <h6>↩ INICIO</h6>
+      </a>
+      <div class="volver">
+        <a href="seguros.html">
+          <h6>↩ VOLVER A SEGUROS</h6>
+        </a>
+      </div>
     </div>
   </body>
 </html>
