--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
         <span
           ><i
             class="fa-solid fa-users-line fa-fade fa-xl"
-            style="color: #1a1414"
+            style="color: #bd0202"
           ></i
         ></span>
 
@@ -195,7 +195,7 @@
         <span
           ><i
             class="fa-solid fa-book-open fa-fade fa-xl"
-            style="color: #1a1414"
+            style="color: #bd0202"
           ></i
         ></span>
         <h2 class="fs-2">
@@ -218,7 +218,13 @@
         </p>
       </div>
       <div>
-        <span><i class="fa-solid fa-scale-balanced fa-fade fa-xl"></i></span>
+        <span
+          ><i
+            class="fa-solid fa-scale-balanced fa-fade fa-xl"
+            style="color: #bd0202"
+          ></i
+        ></span>
+
         <h2 class="fs-2">Asesoramiento y Asistencia Legal y Jurídica</h2>
         <p><i class="fa-solid fa-arrow-right fa-beat"></i> Fiscal</p>
         <p><i class="fa-solid fa-arrow-right fa-beat"></i> Laboral</p>
@@ -229,7 +235,7 @@
         <span
           ><i
             class="fa-solid fa-receipt fa-fade fa-xl"
-            style="color: #1a1414"
+            style="color: #bd0202"
           ></i
         ></span>
         <h2 class="fs-2">
@@ -252,7 +258,7 @@
         <span
           ><i
             class="fa-solid fa-house-chimney fa-fade fa-xl"
-            style="color: #1a1414"
+            style="color: #bd0202"
           ></i
         ></span>
 
@@ -284,7 +290,7 @@
 
       <div>
         <span
-          ><i class="fa-solid fa-bell fa-fade fa-xl" style="color: #1a1414"></i
+          ><i class="fa-solid fa-bell fa-fade fa-xl" style="color: #bd0202"></i
         ></span>
         <h2 class="fs-2">
           Instalación de Alarmas para viviendas, comercios y oficinas
