--- a/planes-ahorro-inversion.html
+++ b/planes-ahorro-inversion.html
@@ -37,12 +37,22 @@
     <div class="descripcion">
       <h1>PLANES DE AHORRO E INVERSIÓN</h1>
       <p>
-        ✅Garantizado<br />
-        ✅Cesta de inversión a elegir (Unit-Linked): Renta fija, mixta, variable
-        (española, europea, internacional, USA...)<br />
-        ✅PIAS (Plan Individual de Ahorro Sistemático)<br />
-        ✅SIALP (Seguro Individual de Ahorro a Largo Plazo)<br />
+        ✅ Garantizado<br />
+        ✅ Cesta de inversión a elegir (Unit-Linked): Renta fija, mixta,
+        variable (española, europea, internacional, USA...)<br />
+        ✅ PIAS (Plan Individual de Ahorro Sistemático)<br />
+        ✅ SIALP (Seguro Individual de Ahorro a Largo Plazo)<br />
       </p>
+    </div>
+    <div class="inicio">
+      <a href="index.html">
+        <h6>↩ INICIO</h6>
+      </a>
+      <div class="volver">
+        <a href="seguros.html">
+          <h6>↩ VOLVER A SEGUROS</h6>
+        </a>
+      </div>
     </div>
   </body>
 </html>
