--- a/planes-pensiones.html
+++ b/planes-pensiones.html
@@ -37,9 +37,19 @@
     <div class="descripcion">
       <h1>PLANES DE PENSIONES</h1>
       <p>
-        ✅Garantizado (PPA)<br />
-        ✅Renta fija, mixta fija, mixta variable, variable...<br />
+        ✅ Garantizado (PPA)<br />
+        ✅ Renta fija, mixta fija, mixta variable, variable...<br />
       </p>
+    </div>
+    <div class="inicio">
+      <a href="index.html">
+        <h6>↩ INICIO</h6>
+      </a>
+      <div class="volver">
+        <a href="seguros.html">
+          <h6>↩ VOLVER A SEGUROS</h6>
+        </a>
+      </div>
     </div>
   </body>
 </html>
