--- a/pymes.html
+++ b/pymes.html
@@ -37,24 +37,34 @@
     <div class="descripcion">
       <h1>PYMES</h1>
       <p>
-        ✅Incendios<br />
-        ✅Daños atmosféricos (incluido por filtraciones de cubierta)<br />
-        ✅Impacto de vehículos<br />
-        ✅Actos vandálicos<br />
-        ✅Daños por agua (localización y reparación, exceso de consumo...)<br />
-        ✅Daños estéticos por cualquier siniestro amparado<br />
-        ✅Daños eléctricos (incluido deterioro de alimentos refrigerados)<br />
-        ✅Robo y hurto de Contenido y de efectivo<br />
-        ✅Gastos de sustitución de cerradura por robo, hurto o pérdida<br />
-        ✅Responsabilidad Civil (actividad, trabajos realizados, contaminación
+        ✅ Incendios<br />
+        ✅ Daños atmosféricos (incluido por filtraciones de cubierta)<br />
+        ✅ Impacto de vehículos<br />
+        ✅ Actos vandálicos<br />
+        ✅ Daños por agua (localización y reparación, exceso de consumo...)<br />
+        ✅ Daños estéticos por cualquier siniestro amparado<br />
+        ✅ Daños eléctricos (incluido deterioro de alimentos refrigerados)<br />
+        ✅ Robo y hurto de Contenido y de efectivo<br />
+        ✅ Gastos de sustitución de cerradura por robo, hurto o pérdida<br />
+        ✅ Responsabilidad Civil (actividad, trabajos realizados, contaminación
         accidental...)<br />
-        ✅Roturas de espejos, cristales, sanitarios, rótulos y cristal de placas
-        solares<br />
-        ✅Pérdida por paralización de la actividad<br />
-        ✅Avería de equipos ofimáticos y maquinaria<br />
-        ✅Cerrajería y electricidad de emergencia<br />
-        ✅Defensa Jurídica y reclamación <br />
+        ✅ Roturas de espejos, cristales, sanitarios, rótulos y cristal de
+        placas solares<br />
+        ✅ Pérdida por paralización de la actividad<br />
+        ✅ Avería de equipos ofimáticos y maquinaria<br />
+        ✅ Cerrajería y electricidad de emergencia<br />
+        ✅ Defensa Jurídica y reclamación <br />
       </p>
+    </div>
+    <div class="inicio">
+      <a href="index.html">
+        <h6>↩ INICIO</h6>
+      </a>
+      <div class="volver">
+        <a href="seguros.html">
+          <h6>↩ VOLVER A SEGUROS</h6>
+        </a>
+      </div>
     </div>
   </body>
 </html>
