--- a/responsabilidad-civil.html
+++ b/responsabilidad-civil.html
@@ -37,12 +37,22 @@
     <div class="descripcion">
       <h1>RESPONSABILIDAD CIVIL</h1>
       <p>
-        ✅Comercios, cultura y ocio<br />
-        ✅Construcción<br />
-        ✅Industrias<br />
-        ✅Privada e Inmuebles<br />
-        ✅Profesional (autónomos)<br />
+        ✅ Comercios, cultura y ocio<br />
+        ✅ Construcción<br />
+        ✅ Industrias<br />
+        ✅ Privada e Inmuebles<br />
+        ✅ Profesional (autónomos)<br />
       </p>
+    </div>
+    <div class="inicio">
+      <a href="index.html">
+        <h6>↩ INICIO</h6>
+      </a>
+      <div class="volver">
+        <a href="seguros.html">
+          <h6>↩ VOLVER A SEGUROS</h6>
+        </a>
+      </div>
     </div>
   </body>
 </html>
