--- a/salud.html
+++ b/salud.html
@@ -37,13 +37,23 @@
     <div class="descripcion">
       <h1>SALUD</h1>
       <p>
-        ✅Asistencia Sanitaria (Cuadro médico con los mejores centros médicos y
+        ✅ Asistencia Sanitaria (Cuadro médico con los mejores centros médicos y
         hospitales)<br />
-        ✅Reembolso<br />
-        ✅Salud Bienestar (pago por uso) incluido para seniors<br />
-        ✅Subsidio por hospitalización o intervención quirúrgica<br />
-        ✅Póliza dental<br />
+        ✅ Reembolso<br />
+        ✅ Salud Bienestar (pago por uso) incluido para seniors<br />
+        ✅ Subsidio por hospitalización o intervención quirúrgica<br />
+        ✅ Póliza dental<br />
       </p>
+    </div>
+    <div class="inicio">
+      <a href="index.html">
+        <h6>↩ INICIO</h6>
+      </a>
+      <div class="volver">
+        <a href="seguros.html">
+          <h6>↩ VOLVER A SEGUROS</h6>
+        </a>
+      </div>
     </div>
   </body>
 </html>
