--- a/vida.html
+++ b/vida.html
@@ -37,14 +37,24 @@
     <div class="descripcion">
       <h1>VIDA</h1>
       <p>
-        ✅Fallecimiento<br />
-        ✅Invalidez<br />
-        ✅Enfermedades Graves<br />
-        ✅Testamento gratuito<br />
-        ✅Rehabilitación cardiaca<br />
-        ✅Segunda opinión médica<br />
-        ✅Borrado digital<br />
+        ✅ Fallecimiento<br />
+        ✅ Invalidez<br />
+        ✅ Enfermedades Graves<br />
+        ✅ Testamento gratuito<br />
+        ✅ Rehabilitación cardiaca<br />
+        ✅ Segunda opinión médica<br />
+        ✅ Borrado digital<br />
       </p>
+    </div>
+    <div class="inicio">
+      <a href="index.html">
+        <h6>↩ INICIO</h6>
+      </a>
+      <div class="volver">
+        <a href="seguros.html">
+          <h6>↩ VOLVER A SEGUROS</h6>
+        </a>
+      </div>
     </div>
   </body>
 </html>
