--- a/accidentes.html
+++ b/accidentes.html
@@ -37,19 +37,24 @@
     <div class="descripcion">
       <h1>ACCIDENTES</h1>
       <p>
-        ✅Fallecimiento<br />
-        ✅Invalidez<br />
-        ✅Subsidio por hospitalización<br />
-        ✅Incapacidad Temporal por accidente o enfermedad<br />
-        ✅Asistencia sanitaria<br />
-        ✅Salud dental y servicios de salud y bienestar<br />
-        ✅Accidentes para colectivos y para convenios obligatorios<br />
+        ✅ Fallecimiento<br />
+        ✅ Invalidez<br />
+        ✅ Subsidio por hospitalización<br />
+        ✅ Incapacidad Temporal por accidente o enfermedad<br />
+        ✅ Asistencia sanitaria<br />
+        ✅ Salud dental y servicios de salud y bienestar<br />
+        ✅ Accidentes para colectivos y para convenios obligatorios<br />
       </p>
     </div>
     <div class="inicio">
       <a href="index.html">
         <h6>↩ INICIO</h6>
       </a>
+      <div class="volver">
+        <a href="seguros.html">
+          <h6>↩ VOLVER A SEGUROS</h6>
+        </a>
+      </div>
     </div>
   </body>
 </html>
