--- a/autos.html
+++ b/autos.html
@@ -37,21 +37,31 @@
     <div class="descripcion">
       <h1>AUTOS</h1>
       <p>
-        ✅Responsabilidad Civil Obligatoria de daños a terceros<br />
-        ✅Responsabilidad Civil como peatón y ciclista<br />
-        ✅Responsabilidad Civil de incendio de vehículo asegurado<br />
-        ✅Daños propios con y sin franquicia<br />
-        ✅Daños por colisión con animales<br />
-        ✅Daños por fenómenos atmosféricos<br />
-        ✅Rotura de Lunas<br />
-        ✅Incendio<br />
-        ✅Robo<br />
-        ✅Radio de remolcaje ilimitado<br />
-        ✅Servicio de alertas de multas de Tráfico<br />
-        ✅Atención preferente si se deriva el auto a nuestros talleres
+        ✅ Responsabilidad Civil Obligatoria de daños a terceros<br />
+        ✅ Responsabilidad Civil como peatón y ciclista<br />
+        ✅ Responsabilidad Civil de incendio de vehículo asegurado<br />
+        ✅ Daños propios con y sin franquicia<br />
+        ✅ Daños por colisión con animales<br />
+        ✅ Daños por fenómenos atmosféricos<br />
+        ✅ Rotura de Lunas<br />
+        ✅ Incendio<br />
+        ✅ Robo<br />
+        ✅ Radio de remolcaje ilimitado<br />
+        ✅ Servicio de alertas de multas de Tráfico<br />
+        ✅ Atención preferente si se deriva el auto a nuestros talleres
         preferentes (descuento en la franquicia, recogida y entrega a domicilio,
         vehículo de sustitución, lavado interior y exterior...)<br />
       </p>
+    </div>
+    <div class="inicio">
+      <a href="index.html">
+        <h6>↩ INICIO</h6>
+      </a>
+      <div class="volver">
+        <a href="seguros.html">
+          <h6>↩ VOLVER A SEGUROS</h6>
+        </a>
+      </div>
     </div>
   </body>
 </html>
