--- a/hogar.html
+++ b/hogar.html
@@ -50,7 +50,7 @@
         ✅ Reposición de cerraduras por hurto o pérdida<br />
         ✅ Responsabilidad Civil del inmueble y familiar (incluye para mascotas,
         obligatoria a partir del 29 de Septiembre por la Ley de Bienestar
-        Animal)<br />
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Animal)<br />
         ✅ Roturas de espejos, cristales, sanitarios, encimeras, vitrocerámicas,
         cristal de placas solares y pantallas de teléfonos móviles <br />
         ✅ Servicio manitas para pequeñas reparaciones en el hogar<br />
