--- a/hogar.html
+++ b/hogar.html
@@ -49,8 +49,9 @@
         ✅ Atraco en el exterior<br />
         ✅ Reposición de cerraduras por hurto o pérdida<br />
         ✅ Responsabilidad Civil del inmueble y familiar (incluye para mascotas,
-        obligatoria a partir del 29 de Septiembre por la Ley de Bienestar
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Animal)<br />
+        obligatoria a partir del 29 de Septiembre
+        <br />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;por la Ley de Bienestar
+        Animal)<br />
         ✅ Roturas de espejos, cristales, sanitarios, encimeras, vitrocerámicas,
         cristal de placas solares y pantallas de teléfonos móviles <br />
         ✅ Servicio manitas para pequeñas reparaciones en el hogar<br />
